--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
     <section class="summary">
       <h2>Summary</h2>
       <p>
-        I'm a seasoned expert in ad moderation and review, with a strong background in content strategy, campaign management, and design. My exceptional interpersonal skills and proven ability to build lasting customer relationships through effective communication set me apart. As a self-motivated high-performer, I thrive in managing multiple projects and consistently deliver outstanding results.
-      </p>
+        A social media policy and guidelines expert with a proven ability to ensure compliance, maintain quality, and deliver impactful results. Leveraging deep knowledge in digital marketing and customer service, I excel in crafting client-focused solutions, fostering strong relationships, and managing complex projects with precision and efficiency.
     </section>
 
     <!-- Skills Section -->
@@ -185,6 +184,16 @@
       </div>
     </section>
 
+    <!-- Education Section -->
+    <section class="education">
+      <h2>Education</h2>
+      <div class="education-item">
+        <h3>Bachelor of Law, Majoring in International Law</h3>
+        <p class="institution">University of North Sumatera | July 2013 - January 2018 | GPA: 3.18</p>
+      </div>
+    </section>
+  </div>
+
     <!-- Awards Section -->
     <section class="awards">
       <h2>Honor & Awards</h2>
@@ -198,14 +207,6 @@
       </ul>
     </section>
 
-    <!-- Education Section -->
-    <section class="education">
-      <h2>Education</h2>
-      <div class="education-item">
-        <h3>Bachelor of Law, Majoring in International Law</h3>
-        <p class="institution">University of North Sumatera | July 2013 - January 2018 | GPA: 3.18</p>
-      </div>
-    </section>
-  </div>
+    
 </body>
 </html>
