--- a/index.html
+++ b/index.html
@@ -4,102 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Asril Gunawan - Resume</title>
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      margin: 0;
-      padding: 0;
-      color: #333;
-      line-height: 1.6;
-      background-color: #f4f4f9;
-    }
-
-    .container {
-      width: 80%;
-      max-width: 900px;
-      margin: 2rem auto;
-      background: #fff;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      padding: 2rem;
-    }
-
-    header {
-      text-align: center;
-      margin-bottom: 2rem;
-    }
-
-    header h1 {
-      margin-bottom: 0.5rem;
-      color: #333;
-    }
-
-    header .contact {
-      font-size: 0.9rem;
-      color: #555;
-    }
-
-    header .contact a {
-      color: #3479bd;
-      text-decoration: none;
-    }
-
-    header .contact a:hover {
-      text-decoration: underline;
-    }
-
-    section h2 {
-      border-bottom: 2px solid #000000;
-      padding-bottom: 0.3rem;
-      margin-bottom: 1rem;
-      color: #333;
-    }
-
-    ul {
-      list-style-type: disc;
-      margin-left: 1.5rem;
-    }
-
-    .skills-container {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 1rem;
-      text-align: center;
-      padding: 0;
-      list-style: none;
-    }
-
-    .skills-container li {
-      background-color: #f0f8ff;
-      border: 1px solid #0073e6;
-      border-radius: 5px;
-      padding: 0.5rem;
-      font-size: 0.9rem;
-      color: #333;
-    }
-
-    .job, .education-item, .award {
-      margin-bottom: 1.5rem;
-    }
-
-    .job h3, .education-item h3, .award h3 {
-      color: #000000;
-      margin-bottom: 0.3rem;
-    }
-
-    .job .company, .education-item .institution, .award .details {
-      font-size: 0.9rem;
-      color: #555;
-    }
-
-    a {
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
@@ -155,10 +60,9 @@
         <h3>Ads Moderation Specialist</h3>
         <p class="company">Accenture | June 2022 - November 2024</p>
         <ul>
-            <li>Reviewed and audited <strong>410+ ads daily</strong> across 20+ diverse queues for the Indonesian market, achieving a <strong>consistent quality score of 98–100%</strong>.</li>
-            <li>Ensured compliance with platform policies to safeguard brand trust and user experience.</li>
-            <li>Enhanced workflow efficiency through <strong>top-performing ideas</strong> recognized at a corporate level.</li>
-  
+          <li>Reviewed and audited <strong>410+ ads daily</strong> across 20+ diverse queues for the Indonesian market, achieving a <strong>consistent quality score of 98–100%</strong>.</li>
+          <li>Ensured compliance with platform policies to safeguard brand trust and user experience.</li>
+          <li>Enhanced workflow efficiency through <strong>top-performing ideas</strong> recognized at a corporate level.</li>
         </ul>
       </div>
 
@@ -166,9 +70,9 @@
         <h3>Digital Marketing Specialist</h3>
         <p class="company">PT. Spin International | October 2021 - June 2022</p>
         <ul>
-            <li>Launched targeted ad campaigns via <strong>Meta Business Suite</strong>, driving increased website clicks and app downloads.</li>
-            <li>Designed and managed engaging content for promotions, achieving significant reach on <strong>Instagram</strong> and <strong>Facebook</strong>.</li>
-            <li>Trained micro-business owners in digital marketing strategies, enabling business growth and enhancing brand visibility.</li>
+          <li>Launched targeted ad campaigns via <strong>Meta Business Suite</strong>, driving increased website clicks and app downloads.</li>
+          <li>Designed and managed engaging content for promotions, achieving significant reach on <strong>Instagram</strong> and <strong>Facebook</strong>.</li>
+          <li>Trained micro-business owners in digital marketing strategies, enabling business growth and enhancing brand visibility.</li>
           <li>Successfully helped small and medium-sized businesses grow by increasing website traffic and enhancing brand awareness through strategic ad campaigns.</li>
         </ul>
       </div>
@@ -194,19 +98,17 @@
     </section>
   </div>
 
-    <!-- Awards Section -->
-    <section class="awards">
-      <h2>Honor & Awards</h2>
-      <ul>
-        <li><strong>Golden Boot Award</strong>: Appreciation of outdated contribution and commendable effort as highest number ideas approved in Unicorn innovation field for April 2024.</li>
-        <li><strong>Top Performer Award</strong>: Exemplary performance for the month of January 2024 as the top performer for Ads moderation (Indonesian Market). Exceeding both quality and productivity expectations.</li>
-        <li><strong>Top Performer Award</strong>: Exemplary performance for the month of November 2023 as the top performer for Ads moderation (Indonesian Market). Exceeding both quality and productivity expectations.</li>
-        <li><strong>Big Game Player Award</strong>: Recognized with Big Game Player award in appreciation of outstanding contribution and commendable effort as Top Best Ideas Contributor in Unicorn Innovation Field for August 2023.</li>
-        <li><strong>Top Performer Award</strong>: Exemplary performance for the month of August 2023 as the top performer for Ads moderation (Indonesian Market). Exceeding both quality and productivity expectations.</li>
-        <li><strong>Zenith Award</strong>: Exemplary performance for the month of September 2022 as the top performer for Ads moderation (Indonesian Market). Exceeding both quality and productivity expectations.</li>
-      </ul>
-    </section>
-
-    
+  <!-- Awards Section -->
+  <section class="awards">
+    <h2>Honor & Awards</h2>
+    <ul>
+      <li><strong>Golden Boot Award</strong>: Appreciation of outdated contribution and commendable effort as highest number ideas approved in Unicorn innovation field for April 2024.</li>
+      <li><strong>Top Performer Award</strong>: Exemplary performance for the month of January 2024 as the top performer for Ads moderation (Indonesian Market). Exceeding both quality and productivity expectations.</li>
+      <li><strong>Top Performer Award</strong>: Exemplary performance for the month of November 2023 as the top performer for Ads moderation (Indonesian Market). Exceeding both quality and productivity expectations.</li>
+      <li><strong>Big Game Player Award</strong>: Recognized with Big Game Player award in appreciation of outstanding contribution and commendable effort as Top Best Ideas Contributor in Unicorn Innovation Field for August 2023.</li>
+      <li><strong>Top Performer Award</strong>: Exemplary performance for the month of August 2023 as the top performer for Ads moderation (Indonesian Market). Exceeding both quality and productivity expectations.</li>
+      <li><strong>Zenith Award</strong>: Exemplary performance for the month of September 2022 as the top performer for Ads moderation (Indonesian Market). Exceeding both quality and productivity expectations.</li>
+    </ul>
+  </section>
 </body>
 </html>
