--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <h2>Summary</h2>
       <p>
         A social media policy and guidelines expert with a proven ability to ensure compliance, maintain quality, and deliver impactful results. Leveraging deep knowledge in digital marketing and customer service, I excel in crafting client-focused solutions, fostering strong relationships, and managing complex projects with precision and efficiency.
+      </p>
     </section>
 
     <!-- Skills Section -->
@@ -32,17 +33,6 @@
         <li>Policy Enforcement</li>
         <li>Digital Marketing</li>
         <li>Customer Service</li>
-        <li>Client Solutions</li>
-        <li>Graphic Design</li>
-        <li>Web Development</li>
-        <li>Campaign Management</li>
-      </ul>
-    </section>
-
-    <!-- Technical Skills Section -->
-    <section class="technical-skills">
-      <h2>Technical Skills</h2>
-      <ul class="skills-container">
         <li>HTML & CSS</li>
         <li>JavaScript</li>
         <li>Meta Business Suite</li>
@@ -73,7 +63,6 @@
           <li>Launched targeted ad campaigns via <strong>Meta Business Suite</strong>, driving increased website clicks and app downloads.</li>
           <li>Designed and managed engaging content for promotions, achieving significant reach on <strong>Instagram</strong> and <strong>Facebook</strong>.</li>
           <li>Trained micro-business owners in digital marketing strategies, enabling business growth and enhancing brand visibility.</li>
-          <li>Successfully helped small and medium-sized businesses grow by increasing website traffic and enhancing brand awareness through strategic ad campaigns.</li>
         </ul>
       </div>
 
@@ -96,19 +85,20 @@
         <p class="institution">University of North Sumatera | July 2013 - January 2018 | GPA: 3.18</p>
       </div>
     </section>
-  </div>
 
-  <!-- Awards Section -->
-  <section class="awards">
-    <h2>Honor & Awards</h2>
-    <ul>
-      <li><strong>Golden Boot Award</strong>: Appreciation of outdated contribution and commendable effort as highest number ideas approved in Unicorn innovation field for April 2024.</li>
-      <li><strong>Top Performer Award</strong>: Exemplary performance for the month of January 2024 as the top performer for Ads moderation (Indonesian Market). Exceeding both quality and productivity expectations.</li>
-      <li><strong>Top Performer Award</strong>: Exemplary performance for the month of November 2023 as the top performer for Ads moderation (Indonesian Market). Exceeding both quality and productivity expectations.</li>
-      <li><strong>Big Game Player Award</strong>: Recognized with Big Game Player award in appreciation of outstanding contribution and commendable effort as Top Best Ideas Contributor in Unicorn Innovation Field for August 2023.</li>
-      <li><strong>Top Performer Award</strong>: Exemplary performance for the month of August 2023 as the top performer for Ads moderation (Indonesian Market). Exceeding both quality and productivity expectations.</li>
-      <li><strong>Zenith Award</strong>: Exemplary performance for the month of September 2022 as the top performer for Ads moderation (Indonesian Market). Exceeding both quality and productivity expectations.</li>
-    </ul>
-  </section>
+   <!-- Awards Section -->
+<section class="awards">
+  <h2>Honor & Awards</h2>
+  <ul>
+    <li><strong>Golden Boot Award</strong>: Appreciation of outstanding contributions and commendable effort as the highest number of approved ideas in Unicorn Innovation Field for April 2024.</li>
+    <li><strong>Top Performer Award</strong>: Exemplary performance for January 2024 as the top performer for Ads moderation (Indonesian Market), exceeding both quality and productivity expectations.</li>
+    <li><strong>Top Performer Award</strong>: Exemplary performance for November 2023 as the top performer for Ads moderation (Indonesian Market), exceeding both quality and productivity expectations.</li>
+    <li><strong>Big Game Player Award</strong>: Recognized with the Big Game Player award for outstanding contributions and commendable effort as a top contributor in Unicorn Innovation Field for August 2023.</li>
+    <li><strong>Top Performer Award</strong>: Exemplary performance for August 2023 as the top performer for Ads moderation (Indonesian Market), exceeding both quality and productivity expectations.</li>
+    <li><strong>Zenith Award</strong>: Exemplary performance for September 2022 as the top performer for Ads moderation (Indonesian Market), exceeding both quality and productivity expectations.</li>
+  </ul>
+</section>
+
+  </div>
 </body>
 </html>
