--- a/index.html
+++ b/index.html
@@ -87,6 +87,19 @@
       </div>
     </section>
 
+    <!-- License & Certifications Section -->
+<section class="certifications">
+  <h2>License & Certifications</h2>
+  <ul>
+    <li>Generative AI Pitfalls (Softskill)</li>
+    <li>Basic Analytical Methods (Softskill)</li>
+    <li>Introduction to Large Language Models (Softskill)</li>
+    <li>Analytics By Function (Softskill)</li>
+    <li>Digital Marketing Strategies (Accenture)</li>
+    <li>Web Development Bootcamp (Udemy)</li>
+  </ul>
+</section>
+
    <!-- Awards Section -->
 <section class="awards">
   <h2>Honor & Awards</h2>
