--- a/index.html
+++ b/index.html
@@ -43,40 +43,59 @@
       </ul>
     </section>
 
-    <!-- Job Experience Section -->
-    <section class="experience">
-      <h2>Job Experience</h2>
+    <!-- Professional Experience Section -->
+<section class="experience">
+  <h2>Job Experience</h2>
 
-      <div class="job">
-        <h3>Ads Moderation Specialist</h3>
-        <p class="company">Accenture | June 2022 - November 2024</p>
-        <ul>
-          <li>Reviewed and audited <strong>410+ ads daily</strong> across 20+ diverse queues for the Indonesian market, achieving a <strong>consistent quality score of 98–100%</strong>.</li>
-          <li>Ensured compliance with platform policies to safeguard brand trust and user experience.</li>
-          <li>Enhanced workflow efficiency through <strong>top-performing ideas</strong> recognized at a corporate level.</li>
-        </ul>
-      </div>
+  <!-- Ads Moderation Specialist -->
+  <div class="job">
+    <h3>Ads Moderation Specialist</h3>
+    <p class="company">Accenture | June 2022 – November 2024</p>
+    <p>
+      As an Ads Moderation Specialist, I was responsible for reviewing, auditing, and moderating over 400 ads daily across more than 20 unique ad categories for the Indonesian market. I ensured all ads adhered to social media platform policies, safeguarding user experience and advertiser trust. My role also involved analyzing policy violations, flagging high-risk content, and contributing to operational improvements by providing actionable insights to streamline workflows.
+    </p>
+    <h4>Key Accomplishments:</h4>
+    <ul>
+      <li>Maintained a consistent quality score of 98–100%, surpassing performance targets.</li>
+      <li>Recognized with multiple performance awards, including Top Performer (4x) and the Golden Boot Award and Big Game Player Award for innovative ideas.</li>
+      <li>Contributed the highest number of approved ideas in the Unicorn Innovation Program, driving operational improvements.</li>
+      <li>Achieved seamless policy enforcement while managing a high workload, showcasing excellent multitasking and attention to detail.</li>
+    </ul>
+  </div>
 
-      <div class="job">
-        <h3>Digital Marketing Specialist</h3>
-        <p class="company">PT. Spin International | October 2021 - June 2022</p>
-        <ul>
-          <li>Launched targeted ad campaigns via <strong>Meta Business Suite</strong>, driving increased website clicks and app downloads.</li>
-          <li>Designed and managed engaging content for promotions, achieving significant reach on <strong>Instagram</strong> and <strong>Facebook</strong>.</li>
-          <li>Trained micro-business owners in digital marketing strategies, enabling business growth and enhancing brand visibility.</li>
-        </ul>
-      </div>
+  <!-- Digital Marketing Specialist -->
+  <div class="job">
+    <h3>Digital Marketing Specialist</h3>
+    <p class="company">PT. Spin International | October 2021 – June 2022</p>
+    <p>
+      In this role, I managed end-to-end digital marketing campaigns, utilizing Meta Business Suite to create and execute targeted ads that increased app downloads and website traffic. I was responsible for designing and curating content for social media platforms such as Instagram and Facebook, analyzing performance metrics to optimize campaigns, and ensuring maximum ROI. Additionally, I conducted workshops to train micro-business owners in digital marketing strategies, helping them enhance their online presence and grow their businesses.
+    </p>
+    <h4>Key Accomplishments:</h4>
+    <ul>
+      <li>Successfully launched campaigns that increased audience engagement by 30% and drove measurable growth in app downloads.</li>
+      <li>Expanded the reach of marketing campaigns, leading to a significant increase in website traffic.</li>
+      <li>Developed training modules that empowered small business owners to improve their online presence and grow their brands.</li>
+      <li>Earned recognition for creative and impactful content that aligned with brand goals.</li>
+    </ul>
+  </div>
 
-      <div class="job">
-        <h3>Marketing Communication</h3>
-        <p class="company">PT. Bank Sumut | March 2019 - October 2021</p>
-        <ul>
-          <li>Designed compelling visuals for <strong>social media, print, and press releases</strong>, driving increased audience engagement.</li>
-          <li>Spearheaded campaign planning for corporate and marketing communications, collaborating with influencers to promote digital products.</li>
-          <li>Managed customer service operations, ensuring accurate and compliant document management and archiving processes.</li>
-        </ul>
-      </div>
-    </section>
+  <!-- Marketing Communication Specialist -->
+  <div class="job">
+    <h3>Marketing Communication Specialist</h3>
+    <p class="company">PT. Bank Sumut | March 2019 – October 2021</p>
+    <p>
+      I oversaw marketing communication activities, including designing creative assets for social media, print materials, and press releases to enhance brand visibility. I planned and executed campaigns for corporate events, marketing promotions, and digital product launches, collaborating with influencers to expand awareness and strengthen customer engagement. Additionally, I managed customer inquiries and documentation processes to ensure exceptional customer service and efficient archiving.
+    </p>
+    <h4>Key Accomplishments:</h4>
+    <ul>
+      <li>Increased audience engagement by 40% through visually appealing and targeted social media campaigns.</li>
+      <li>Played a key role in launching a digital banking product that resulted in a 20% increase in new account sign-ups.</li>
+      <li>Streamlined document archiving processes, reducing errors and improving accessibility.</li>
+      <li>Successfully planned and executed corporate campaigns that enhanced brand reputation and customer loyalty.</li>
+    </ul>
+  </div>
+
+</section>
 
     <!-- Education Section -->
     <section class="education">
@@ -92,10 +111,11 @@
   <h2>License & Certifications</h2>
   <ul>
     <li>Generative AI Pitfalls (Softskill)</li>
-    <li>Basic Analytical Methods (Softskill)</li>
     <li>Introduction to Large Language Models (Softskill)</li>
+    <li>Basic Analytical Methods (Softskill)</li>
     <li>Analytics By Function (Softskill)</li>
     <li>Digital Marketing Strategies (Accenture)</li>
+    <li>Digital Marketing Specialist (Myskills.id)</li>
     <li>Web Development Bootcamp (Udemy)</li>
   </ul>
 </section>
