--- a/index.html
+++ b/index.html
@@ -25,23 +25,24 @@
       </p>
     </section>
 
-    <!-- Skills Section -->
-    <section class="skills">
-      <h2>Skills</h2>
-      <ul class="skills-container">
-        <li>Content Trust & Safety</li>
-        <li>Ads Strategist</li>
-        <li>Policy Enforcement</li>
-        <li>Digital Marketing</li>
-        <li>Customer Service</li>
-        <li>HTML & CSS</li>
-        <li>JavaScript</li>
-        <li>Meta Business Suite</li>
-        <li>Microsoft Excel</li>
-        <li>Canva</li>
-        <li>Adobe</li>
-      </ul>
-    </section>
+    <!-- Key Competencies Section -->
+<section class="key-competencies">
+  <h2>Key Competencies</h2>
+  <ul>
+    <li>Content Trust & Safety</li>
+    <li>Quality Analyst</li>
+    <li>Policy Enforcement</li>
+    <li>Digital Marketing</li>
+    <li>Client Growth Solutions</li>
+    <li>Customer Relations Management</li>
+    <li>Ads Strategist</li>
+    <li>Social Media Operations</li>
+    <li>Web Development</li>
+  </ul>
+</section>
+
+
+   
 
     <!-- Professional Experience Section -->
 <section class="experience">
@@ -106,17 +107,43 @@
       </div>
     </section>
 
+     <!-- Skills Section -->
+     <section class="skills">
+      <h2>Skills</h2>
+      <ul class="skills-container">
+        <li>Sharp Analytics</li>
+        <li>Ethical Decision Making</li>
+        <li>Rapid Decision Making Making</li>
+        <li>Policy & Guidelines Mastery</li>
+        <li>Conflict Resolution</li>
+        <li>Legal Awareness</li>
+        <li>CRM</li>
+        <li>Get Things Done</li>
+        <li>HTML & CSS</li>
+        <li>JavaScript</li>
+        <li>Meta Business Suite</li>
+        <li>Microsoft Excel</li>
+        <li>Canva</li>
+        <li>Adobe Suites</li>
+      </ul>
+    </section>
+
     <!-- License & Certifications Section -->
 <section class="certifications">
   <h2>License & Certifications</h2>
   <ul>
-    <li>Generative AI Pitfalls (Softskill)</li>
-    <li>Introduction to Large Language Models (Softskill)</li>
-    <li>Basic Analytical Methods (Softskill)</li>
-    <li>Analytics By Function (Softskill)</li>
-    <li>Digital Marketing Strategies (Accenture)</li>
-    <li>Digital Marketing Specialist (Myskills.id)</li>
-    <li>Web Development Bootcamp (Udemy)</li>
+    <li>Generative AI Pitfalls - Issued by Softskill</li>
+    <li>Introduction to Large Language Models - Issued by Softskill</li>
+    <li>Basic Analytical Methods - Issued by Softskill</li>
+    <li>Analytics By Function - Issued by Softskill</li>
+    <li>Building CRM in Virtual Environment - Issued by Softskill</li>
+    <li>Digital Transformation Insights: Marketing, Sales & Engineering Functions - Issued by Softskill</li>
+    <li>Social Media and Social Selling - Issued by Softskill</li>
+    <li>Digital Marketing Strategist - Issued by Accenture</li>
+    <li>Digital Skills: Artificial Intelligence - Issued by Accenture</li>
+    <li>Digital Marketing Specialist - Issued by Myskills.id</li>
+    <li>Social Media Management - Issued by Myskills.id</li>
+    <li>Web Development Bootcamp - Issued by Udemy</li>
   </ul>
 </section>
 
